# animalhash

./: Cargo.toml  Makefile  README.md  tags
doc/: animalhash.1.md
src/: main.rs
