[package]
name = "animalhash"
version = "0.4.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = """Generate a docker-esque animal-colour-adjective. Can optionally disable the 'animal', 'adjective', and 'colour' portions, as well as semi-titlecase the result. Examples :: 'smalltealtortoise'; 'affectionateMagentaPuffin'; 'bigred'; 'redoctopus'; 'reverantmeadowlark'."""
repository = "https://www.github.com/chrisdavison/animalhash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
